Use built-in locks instead of library-provided ones